--- a/index.html
+++ b/index.html
@@ -255,4 +255,8 @@
       heading.style.display = "none";
     }
   </script>
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </html>
